# solver-controller

./: .trivyignore  Dockerfile  README.md  cosign-dev.key  cosign-dev.pub  push_to_harbor.sh  pyproject.toml  requirements-dev.txt  requirements.txt  skaffold.yaml
.github/workflows/: ci.yaml  push.yaml
helm/: Chart.yaml
helm/templates/: deployment.yaml
src/: config.py  dispatcher.py  main.py  spawner.py  startup.py
src/blueprints/: health.py
src/routers/api/: routes.py
tests/: conftest.py  test_health.py  test_metrics.py
