[project]
name = "solver-controller"
version = "0.1.0"
dependencies = [
    "fastapi[standard]>=0.120.0,<0.121",
    "prometheus-fastapi-instrumentator>=7.1.0,<8.0",
    "gunicorn>=23.0,<24.0",
    "kubernetes>=34.1,<35.0",
    "pika>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=7,<8",
    "ruff>=0.6,<1.0",
    "bandit>=1.7,<2.0",
    "pip-audit>=2.7,<3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
