[project]
name = "solver-controller"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.120.0,<0.121",
    "prometheus-fastapi-instrumentator>=7.1.0,<8.0",
    "gunicorn>=25.0,<26.0",
    "kubernetes>=35.0,<36.0",
    "aio-pika>=9.0,<10.0",
    "httpx>=0.28.1,<0.29.0",
    # Security: minimum versions required to satisfy vulnerability checks
    "python-multipart>=0.0.22",
    "urllib3>=2.6.3",
]

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "ruff>=0.6,<1.0",
    "bandit>=1.7,<2.0",
    "pip-audit>=2.7,<3.0",
    # Security: minimum versions required to satisfy vulnerability checks
    "filelock>=3.20.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
